other-mpol/mitigate-log4shell/.chainsaw-test/partial-exception-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-exception
  namespace: default
spec:
  containers:
  - name: first
    image: approved.example/keep:1
  - name: middle
    image: example/mutate:1
  - name: last
    image: example/mutate-last:1
