other-mpol/mitigate-log4shell/.chainsaw-test/pod-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "true"
