other-mpol/mitigate-log4shell/.chainsaw-test/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: foo
      value: bar
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "false"
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  initContainers:
  - name: busybox-init
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "false"
  - name: busybox02-init
    image: ghcr.io/kyverno/test-busybox:1.35
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  - name: busybox02
    image: ghcr.io/kyverno/test-busybox:1.35
    env:
    - name: foo
      value: bar
    - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
      value: "false"
