other-mpol/mitigate-log4shell/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: mitigate-log4shell
spec:
  steps:
  - name: policy-exceptions-namespace
    skipDelete: true
    try:
    - apply:
        resource: {apiVersion: v1, kind: Namespace, metadata: {name: policy-exceptions}}
  - name: step-01
    try:
    - apply:
        file: ../mitigate-log4shell.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pod.yaml
    - apply:
        file: podcontroller.yaml
    - assert:
        file: pod-patched01.yaml
    - assert:
        file: pod-patched02.yaml
    - assert:
        file: pod-patched03.yaml
    - assert:
        file: deploy-patched.yaml
    - assert:
        file: cronjob-patched.yaml
  - name: step-03-partial-exception
    try:
    - apply:
        file: partial-exception.yaml
    - apply:
        file: partial-exception-pod.yaml
    - assert:
        file: partial-exception-pod-patched.yaml
    - error:
        resource:
          apiVersion: v1
          kind: Pod
          metadata:
            name: partial-exception
            namespace: default
          spec:
            containers:
            - name: first
              env:
              - name: LOG4J_FORMAT_MSG_NO_LOOKUPS
                value: "true"
